...
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:background="@drawable/bg_c"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/button_switch_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_capture_cam2" />
...
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="12" />

                <ImageButton
                    android:id="@+id/button_close"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_capture_cancel" />
...
